--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "puppeteer": "^23.1.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "tough-cookie": "^5.0.0",
     "typescript": "^5.6.2",
     "ytdl-core": "^4.11.5"
   },
