--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "cross-env DEBUG=playwright* nodemon app.js"
+    "start": "npx playwright install && cross-env DEBUG=playwright* nodemon app.js"
   },
   "keywords": [],
   "author": "",
